# String-Calculator

./: .gitignore  CMakeLists.txt  README.md
src/: StringCalculator.cpp  StringCalculator.h
test/: StringCalculatorTest.cpp
